# lettercast

./: .gitignore  README.md  podcasts.csv  pyproject.toml
examples/: analyze_podcast.py
migrations/: env.py
migrations/versions/: 8517f0be6d65_new_schema.py
scripts/: database_operations.ipynb  run.py
src/: cli.py  handler.py  pyproject.toml  run.py
src/core/: __init__.py  analyzer.py  audio.py  audio_transformer.py  downloader.py  newsletter.py  prompts.py  scraper.py
src/database/: __init__.py  config.py  crud.py  database_operations.ipynb  init_db.py  models.py  test_connection.py
src/db/: crud.py  models.py
src/utils/: __init__.py  audio_transformer.py  downloader.py  logging.py  logging_config.py  process_podcast.py  temp_file_context.py
tests/: conftest.py  test_analyzer.py  test_audio_utils.py  test_scraper.py
tests/integration/: test_pipeline.py
tests/tools/: test_gemini_storage.ipynb  test_prompt.py
tests/unit/: test_analyzer.py  test_audio.py  test_downloader.py  test_handler.py  test_models.py  test_newsletter.py
