[project]
name = "lettercast"
version = "0.1.0"
description = ""
authors = [
    {name = "kavwad",email = "123405488+kavwad@users.noreply.github.com"},
    {name = "patrickswnsn",email = "patrickdswanson@icloud.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts (>=0.2.1,<0.3.0)",
    "google-generativeai (>=0.8.3,<0.9.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
    { include = "core", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

